--- a/SomethingCachey/Views/Shared/_Layout.cshtml
+++ b/SomethingCachey/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
             <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" alt="" class="img-fluid">
+                    <a href="http://www.SomethingCachey.com/"></a>
                 </a>
 
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09"
