Last week of school push

--- a/SomethingCachey/Views/Home/Index.cshtml
+++ b/SomethingCachey/Views/Home/Index.cshtml
@@ -28,9 +28,10 @@
                                 </span>
                             </h2>
                             <p>
-                                I am currently enrolled in Centriq's Full Stack coding program.
-                                <br> This November I start my journey as a Junior Developer. <br>
-                                This Website will teach you about me and show you what I have done during my time at Centriq.<br>
+                                My name is Casey Brown <br />
+                                I'm a recent graduate from Centriqs IT career program. <br />
+                                I specialize in Full Stack development and have designed this site to showcase my skills and demonstrate what I can do.<br />
+                                Given the chance, I would love to help bring your visions to life too.<br />
                             </p>
                         </div>
                     </div>
@@ -44,7 +45,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <h2 class="mb-2 ">Skills Learned</h2>
-                            <p class="mb-5">Here I will show a few of the languages, frameworks and more that I've learned thus far at Centriq.</p>
+                            <p class="mb-5">Here are a few of the languages, frameworks and more that I learned Centriq.</p>
                         </div>
                     </div>
 
@@ -53,42 +54,42 @@
                             <div class="service-item mb-5" data-aos="fade-left">
                                 <i class="fa-brands fa-html5"></i>
                                 <h4 class="my-3">HTML</h4>
-                                <p>Text Goes Here.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="service-item mb-5" data-aos="fade-left" data-aos-delay="250">
                                 <i class="fa-brands fa-css3-alt"></i>
                                 <h4 class="my-3">CSS</h4>
-                                <p>Text Goes Here.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="service-item mb-5" data-aos="fade-left" data-aos-delay="450">
                                 <i class="fa-solid fa-hashtag"></i>
                                 <h4 class="my-3">C#</h4>
-                                <p>Text Goes Here.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="service-item mb-5" data-aos="fade-left" data-aos-delay="550">
                                 <i class="fa-brands fa-square-js"></i>
                                 <h4 class="my-3">Javascript</h4>
-                                <p>Text Goes Here.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="service-item mb-5" data-aos="fade-left" data-aos-delay="750">
                                 <i class="fa-brands fa-microsoft"></i>
                                 <h4 class="my-3">Microsoft SQL</h4>
-                                <p>Text Goes Here.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="service-item mb-5" data-aos="fade-left" data-aos-delay="950">
                                 <i class="fa-solid fa-infinity"></i>
                                 <h4 class="my-3">ASP.NET Core MVC</h4>
-                                <p>Text Goes Here.</p>
+                                <p></p>
                                 </>
                             </div>
                         </div>
