--- a/SomethingCachey/Views/Home/Portfolio.cshtml
+++ b/SomethingCachey/Views/Home/Portfolio.cshtml
@@ -111,7 +111,7 @@
                         <div class="portfolio-info">
                             <h4>Final Project</h4>
                             <p>
-                                We'll Find Out More Soon'
+                                We'll Find Out More Soon.
                             </p>
                             <div class="portfolio-links">
                                 <a href="https://github.com/CaseyBrownWD/" target="_blank" title="View Code"><i class="bx bx-plus"></i></a> 
