--- a/SomethingCachey/Views/Home/Resume.cshtml
+++ b/SomethingCachey/Views/Home/Resume.cshtml
@@ -14,10 +14,18 @@
 				</div>
 			</div>
 			<div class="col-lg-7">
-				<h2>Casey Brown</h2>
-				<p class="lead mb-4">I am.... </p>
-
-				<p class="mb-4"> I'm a 32 year old Full Stack Web Developer born and raise in Independence, MO.    </p>
+				<h2>About Me</h2>
+				
+				<p class="mb-4"> I'm a 32 years old, born and raise in Independence, MO. I've spent most of my adult life working in a sales driven environment.
+					<br />
+					<br />					
+					One day I woke up and chose to leave behind the career I knew and enroll in Centriq's Full Stack Web Development course. I spent 100+ days straight, living eating and breathing code. I'm able to do full stack web application design, database management, and more. 
+					<br />
+					<br />
+With my heavy background in retail and customer services roles, I often receive praise for my positive 'How can I help?' attitude. I truly value that time in my life because it taught me how to problem solve, work under pressure, be flexible with new responsibilities, take initiative, manage time, and communicate effectively and empathetically with every client.
+					<br />
+					<br />
+I’m hard-working, enthusiastic, and most importantly ready to work.  </p>
 
 				
 				<img src="../images/signature.png" alt="" class="img-fluid">
@@ -52,21 +60,21 @@
 							<span>September 2015 - July 2022</span>
 							<h4 class="mb-3 mt-1">Sales Associate at Dillards</h4>
 							<p>
-								Provided new and returning customers with exceptional care.
-								Worked collaboratively in a team environment.
-								Completed all point-of-sale procedures, including balancing totals daily.
-								Managed all customer relations issues in a gracious manner.
-								Mentored new sales associates to contribute to the store’s positive culture.
+								<li> Provided new and returning customers with exceptional care.</li>
+								<li> Worked collaboratively in a team environment.</li>
+								<li> Completed all point-of-sale procedures, including balancing totals daily.</li>
+								<li> Managed all customer relations issues in a gracious manner.</li>
+								<li> Mentored new sales associates to contribute to the store’s positive culture.</li>
 							</p>
 						</div>
 						<div class="about-info">
 							<span>January 2015 - August 2018</span>
 							<h4 class="mb-3 mt-1">Financial Operations Coordinator</h4>
 							<p>
-								Input paperwork for the processing of fuel transactions.
-								Calculated fees and charges for various haulers and customers.
-								Assembled and submitted to final bill for fuel.
-								Maintained relationships with customers and haulers with accuracy and timeliness.
+								<li> Input paperwork for the processing of fuel transactions.</li>
+								<li> Calculated fees and charges for various haulers and customers.</li>
+								<li> Assembled and submitted to final bill for fuel.</li>
+								<li> Maintained relationships with customers and haulers with accuracy and timeliness.</li>
 							</p>
 						</div>
 					</div>
@@ -79,7 +87,7 @@
 </section>
 <!-- About End -->
 
-<!-- Skill Start -->
+<!-- Skill Start 
 <section class="section skills">
 	<div class="container">
 		<div class="row">
@@ -128,7 +136,7 @@
 		</div>
 	</div>
 </section>
-<!-- Skill end -->
+ Skill end -->
 
 <!-- Cta Start -->
 <section class="section-sm pt-0 cta">
@@ -138,7 +146,7 @@
 				<h3 class="text-white mb-0">Want to discuss about any project?</h3>
 			</div>
 			<div class="col-lg-4 text-lg-right mt-5 mt-lg-0">
-				<a href="#" class="btn btn-white">Contact me</a>
+				<a class="nav-link" href="@Url.Action("Contact", "Home")">Contact Me</a>>
 			</div>
 		</div>
 	</div>
