--- a/SomethingCachey/Views/Home/Contact.cshtml
+++ b/SomethingCachey/Views/Home/Contact.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h1 class="text-capitalize mb-0 text-lg">Get in Touch</h1> 
+                    <h1 class="text-capitalize mb-0 text-lg">Get in Touch</h1>
                 </div>
             </div>
         </div>
@@ -21,71 +21,49 @@
 
 <section class="contact section">
     <div class="container">
-        @*<div class="row">
-            <div class="col-lg-4 mb-4 mb-lg-0 col-md-4">
-                <h4>Contact Info</h4>
-                <p>Casey Brown</p>
-            </div>
-            <div class="col-lg-4 mb-4 mb-lg-0 col-md-4">
-                <h4>Linked In Address</h4>
-                <p>https://www.linkedin.com/in/casey-brown-4858831b7/</p>
-            </div>
-            <div class="col-lg-4 col-md-4">
-                <h4>Contact</h4>
-                <p>Please feel free to message me on LinkedIn. </p>
-            </div>
-        </div>*@
+        <div class="row">
+            <div class="col-lg-8 mb-4 mb-lg-0 col-md-10">
+                <h1>Contact</h1>
+                <form asp-action="Contact">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        
-        <section class="contact section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 mb-4 mb-lg-0 col-md-4">
-                        <h1>Contact</h1>
-                        <form asp-action="Contact">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            
-                            <div class="form-group">
-                                <label asp-for="Name" class="control-label"></label>
-                                <input asp-for="Name" class="form-control" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label asp-for="Email" class="control-label"></label>
-                                <input asp-for="Email" class="form-control" />
-                                <span asp-validation-for="Email" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label asp-for="Subject" class="control-label"></label>
-                                <input asp-for="Subject" class="form-control" />
-                                <span asp-validation-for="Subject" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label asp-for="Message" class="control-label"></label>
-                                <textarea asp-for="Message" class="form-control"></textarea>
-                                <span asp-validation-for="Message" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />
-                            </div>
-                        </form>
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Subject" class="control-label"></label>
+                        <input asp-for="Subject" class="form-control" />
+                        <span asp-validation-for="Subject" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Message" class="control-label"></label>
+                        <textarea asp-for="Message" class="form-control"></textarea>
+                        <span asp-validation-for="Message" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="submit" value="Submit" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-        </section>
-
-    </div> 
-
+        </div>
+    </div>
 </section>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
