--- a/SomethingCachey/Views/Shared/_Layout.cshtml
+++ b/SomethingCachey/Views/Shared/_Layout.cshtml
@@ -41,9 +41,8 @@
 
         <nav class="navbar navbar-expand-lg  main-nav " id="navbar">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                     <img src="images/logo.png" alt="" class="img-fluid">
-                    <a href="http://www.SomethingCachey.com/"></a>
                 </a>
 
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09"
